<project xmlns="http://maven.apache.org/POM/4.0.0" 
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tgg-benchmark</groupId>
  <artifactId>tgg-benchmark</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <!-- <packaging>eclipse-plugin</packaging> -->

  <properties>
    <tycho-version>1.4.0</tycho-version>
    <junit-version>5.5.1</junit-version>
    <controlsfx-version>8.40.15</controlsfx-version>
    <json-version>1.1.4</json-version>
    <poi-ooxml-version>1.2.3</poi-ooxml-version>
    <apache-poi-version>4.1.0</apache-poi-version>
    <apache-commons-csv-version>1.7</apache-commons-csv-version>
    <terracotta-version>1.0.2</terracotta-version>
    <log4j-version>2.12.1</log4j-version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <target>
            <artifact>
              <groupId>example.group</groupId>
              <artifactId>mars</artifactId>
              <version>1.0.0-SNAPSHOT</version>
            </artifact>
          </target>
          <environments>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>

  <dependencies>

    <!-- Unit tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-version}</version>
      <scope>test</scope>
    </dependency>

    <!-- JavaFX -->
    <!-- <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx-version}</version>
    </dependency> -->

    <!-- Custom controls for JavaFX -->
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>${controlsfx-version}</version>
    </dependency>

    <!-- Save JSON files -->
    <dependency>
      <groupId>javax.json</groupId>
      <artifactId>javax.json-api</artifactId>
      <version>${json-version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>${json-version}</version>
    </dependency>

    <!-- Log4J2 Logger -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j-version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j-version}</version>
    </dependency>

    <!-- Save Excel files -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>${apache-poi-version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${apache-poi-version}</version>
    </dependency>

    <!-- Save CSV files -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>${apache-commons-csv-version}</version>
    </dependency>

    <!-- Spawning new JVMs and IPC -->
    
    <!-- <dependency>
      <groupId>org.terracotta</groupId>
      <artifactId>ipc-eventbus</artifactId>
      <version>${terracotta-version}</version>
    </dependency> -->
    
    <!-- Dependencies for org.terracotta.ipc-eventbus -->
    <!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna -->
	<dependency>
	    <groupId>net.java.dev.jna</groupId>
	    <artifactId>jna</artifactId>
	    <version>5.4.0</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform -->
	<dependency>
	    <groupId>net.java.dev.jna</groupId>
	    <artifactId>jna-platform</artifactId>
	    <version>5.4.0</version>
	</dependency>
		
	<!-- End: Dependencies for org.terracotta.ipc-eventbus -->

    <dependency>
      <groupId>io.github.classgraph</groupId>
      <artifactId>classgraph</artifactId>
      <version>4.8.47</version>
    </dependency>

  </dependencies>
</project>
